--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@ body {
 }
 
 header {
-  border-bottom: solid 2px rgb(42, 122, 228);
+  border-bottom: solid 2px rgba(255, 255, 255, 1);
   padding: 20px;
   font-size: 32px;
-  color: rgb(42, 122, 228);
+  color: rgba(255, 255, 255, 1);
 }
 
 section {
-  background: rgb(184, 156, 213);
+  background: rgba(4, 0, 255, 1);
   padding-bottom: 80px;
   padding-top: 80px;
   display: flex;
